event arch refactor